# interpreter-in-c

./: .gitignore  CMakeLists.txt  README.md  main.c  tokens.c  tokens.h
ast/: ast.c  ast.h  ast_test.c  expressions.c
book/: README.md  writing_an_interpreter_in_go_1.7.epub  writing_an_interpreter_in_go_1.7.html  writing_an_interpreter_in_go_1.7.mobi
code/: tokens.c
code/ast/: ast.c  ast_test.c  expressions.c
code/eval/: eval.c  eval_test.c
code/lexer/: lexer.c  lexer_test.c
code/parser/: expressions.c  parser.c  parser_test.c  statements.c
code/repl/: repl.c
eval/: eval.c  eval_test.c
lexer/: lexer.c  lexer.h
parser/: parser.c  parser.h
repl/: repl.c
src/: main.c  tokens.c  tokens.h
src/ast/: ast.c  ast.h  expressions.c  expressions.h
src/eval/: builtins.c  builtins.h  eval.c  eval.h
src/lexer/: lexer.c  lexer.h  lexer_test.c
src/parser/: parser.c  parser.h  parser_test.c  statements.c  statements.h
src/repl/: repl.c  repl.h
tests/: all_tests.c  ast_test.c  basic.mnk  eval_test.c  lexer_test.c  parser_test.c
